fix(references): refer to proper bower_components directory

--- a/position-snackbar/x-app.html
+++ b/position-snackbar/x-app.html
@@ -8,12 +8,12 @@ Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
 
-<link rel="import" href="../../../paper-toast/paper-toast.html">
-<link rel="import" href="../../../paper-button/paper-button.html">
-<link rel="import" href="../../../paper-toggle-button/paper-toggle-button.html">
-<link rel="import" href="../../../iron-flex-layout/classes/iron-flex-layout.html">
-<link rel="import" href="../../../iron-icons/iron-icons.html">
-<link rel="import" href="../../../iron-media-query/iron-media-query.html">
+<link rel="import" href="../bower_components/paper-toast/paper-toast.html">
+<link rel="import" href="../bower_components/paper-button/paper-button.html">
+<link rel="import" href="../bower_components/paper-toggle-button/paper-toggle-button.html">
+<link rel="import" href="../bower_components/iron-flex-layout/classes/iron-flex-layout.html">
+<link rel="import" href="../bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="../bower_components/iron-media-query/iron-media-query.html">
 
 <!--
 Mobile snackbars are at the bottom, because it’s never far from the thing you interacted with. Sometimes desktop snackbars are far from the thing. But they can also be positioned relative to the thing you touched.
