--- a/pesto-app/elements/elements.html
+++ b/pesto-app/elements/elements.html
@@ -9,37 +9,37 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 -->
 
 <!-- Iron elements -->
-<link rel="import" href="../../../iron-flex-layout/classes/iron-flex-layout.html">
-<link rel="import" href="../../../iron-flex-layout/iron-flex-layout.html">
-<link rel="import" href="../../../iron-icon/iron-icon.html">
-<link rel="import" href="../../../iron-image/iron-image.html">
-<link rel="import" href="../../../iron-icons/iron-icons.html">
-<link rel="import" href="../../../iron-pages/iron-pages.html">
-<link rel="import" href="../../../iron-selector/iron-selector.html">
-<link rel="import" href="../../../iron-ajax/iron-ajax.html">
-<link rel="import" href="../../../iron-media-query/iron-media-query.html">
-<link rel="import" href="../../../iron-collapse/iron-collapse.html">
-<link rel="import" href="../../../iron-overlay-behavior/iron-overlay-behavior.html">
+<link rel="import" href="../../bower_components/iron-flex-layout/classes/iron-flex-layout.html">
+<link rel="import" href="../../bower_components/iron-flex-layout/iron-flex-layout.html">
+<link rel="import" href="../../bower_components/iron-icon/iron-icon.html">
+<link rel="import" href="../../bower_components/iron-image/iron-image.html">
+<link rel="import" href="../../bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="../../bower_components/iron-pages/iron-pages.html">
+<link rel="import" href="../../bower_components/iron-selector/iron-selector.html">
+<link rel="import" href="../../bower_components/iron-ajax/iron-ajax.html">
+<link rel="import" href="../../bower_components/iron-media-query/iron-media-query.html">
+<link rel="import" href="../../bower_components/iron-collapse/iron-collapse.html">
+<link rel="import" href="../../bower_components/iron-overlay-behavior/iron-overlay-behavior.html">
 
 <!-- Paper elements -->
-<link rel="import" href="../../../paper-drawer-panel/paper-drawer-panel.html">
-<link rel="import" href="../../../paper-icon-button/paper-icon-button.html">
-<link rel="import" href="../../../paper-header-panel/paper-header-panel.html">
-<link rel="import" href="../../../paper-item/paper-item.html">
-<link rel="import" href="../../../paper-material/paper-material.html">
-<link rel="import" href="../../../paper-menu/paper-menu.html">
-<link rel="import" href="../../../paper-menu-button/paper-menu-button.html">
-<link rel="import" href="../../../paper-scroll-header-panel/paper-scroll-header-panel.html">
-<link rel="import" href="../../../paper-styles/shadow.html">
-<link rel="import" href="../../../paper-styles/paper-styles-classes.html">
-<link rel="import" href="../../../paper-toast/paper-toast.html">
-<link rel="import" href="../../../paper-toolbar/paper-toolbar.html">
-<link rel="import" href="../../../paper-card/paper-card.html">
-<link rel="import" href="../../../paper-fab/paper-fab.html">
+<link rel="import" href="../../bower_components/paper-drawer-panel/paper-drawer-panel.html">
+<link rel="import" href="../../bower_components/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="../../bower_components/paper-header-panel/paper-header-panel.html">
+<link rel="import" href="../../bower_components/paper-item/paper-item.html">
+<link rel="import" href="../../bower_components/paper-material/paper-material.html">
+<link rel="import" href="../../bower_components/paper-menu/paper-menu.html">
+<link rel="import" href="../../bower_components/paper-menu-button/paper-menu-button.html">
+<link rel="import" href="../../bower_components/paper-scroll-header-panel/paper-scroll-header-panel.html">
+<link rel="import" href="../../bower_components/paper-styles/shadow.html">
+<link rel="import" href="../../bower_components/paper-styles/paper-styles-classes.html">
+<link rel="import" href="../../bower_components/paper-toast/paper-toast.html">
+<link rel="import" href="../../bower_components/paper-toolbar/paper-toolbar.html">
+<link rel="import" href="../../bower_components/paper-card/paper-card.html">
+<link rel="import" href="../../bower_components/paper-fab/paper-fab.html">
 <!-- Uncomment next block to enable Service Worker Support (2/2) -->
 <!--
-<link rel="import" href="../../../platinum-sw/platinum-sw-cache.html">
-<link rel="import" href="../../../platinum-sw/platinum-sw-register.html">
+<link rel="import" href="../../bower_components/platinum-sw/platinum-sw-cache.html">
+<link rel="import" href="../../bower_components/platinum-sw/platinum-sw-register.html">
 -->
 
 <!-- Configure your routes here -->
