--- a/reflow-grid-list/collapsible-card.html
+++ b/reflow-grid-list/collapsible-card.html
@@ -8,9 +8,9 @@ Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
 
-<link rel="import" href="../../polymer/polymer.html">
-<link rel="import" href="../../iron-collapse/iron-collapse.html">
-<link rel="import" href="../../paper-styles/shadow.html">
+<link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="../bower_components/iron-collapse/iron-collapse.html">
+<link rel="import" href="../bower_components/paper-styles/shadow.html">
 
 <dom-module id="collapsible-card">
 
