--- a/reflow-grid-list/schedule-grid.html
+++ b/reflow-grid-list/schedule-grid.html
@@ -8,10 +8,10 @@ Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
 
-<link rel="import" href="../../polymer/polymer.html">
-<link rel="import" href="../../iron-collapse/iron-collapse.html">
-<link rel="import" href="../../iron-icons/iron-icons.html">
-<link rel="import" href="../../paper-styles/shadow.html">
+<link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="../bower_components/iron-collapse/iron-collapse.html">
+<link rel="import" href="../bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="../bower_components/paper-styles/shadow.html">
 <link rel="import" href="cascaded-animation-behavior.html">
 <link rel="import" href="collapsible-card.html">
 <link rel="import" href="grid-list.html">
