--- a/reflow-ui-header/x-app.html
+++ b/reflow-ui-header/x-app.html
@@ -8,10 +8,10 @@ Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
 
-<link rel="import" href="../../../polymer/polymer.html">
-<link rel="import" href="../../../iron-media-query/iron-media-query.html">
-<link rel="import" href="../../../iron-flex-layout/classes/iron-flex-layout.html">
-<link rel="import" href="../../../paper-button/paper-button.html">
+<link rel="import" href="../bower_components/polymer/polymer.html">
+<link rel="import" href="../bower_components/iron-media-query/iron-media-query.html">
+<link rel="import" href="../bower_components/iron-flex-layout/classes/iron-flex-layout.html">
+<link rel="import" href="../bower_components/paper-button/paper-button.html">
 <link rel="import" href="reflow-clock.html">
 <dom-module id="x-app">
   <style>
