--- a/transform-navigation/x-app.html
+++ b/transform-navigation/x-app.html
@@ -7,16 +7,16 @@ The complete set of contributors may be found at http://polymer.github.io/CONTRI
 Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
-<link rel="import" href="../../../iron-icons/iron-icons.html">
-<link rel="import" href="../../../paper-drawer-panel/paper-drawer-panel.html">
-<link rel="import" href="../../../paper-header-panel/paper-header-panel.html">
-<link rel="import" href="../../../paper-icon-button/paper-icon-button.html">
-<link rel="import" href="../../../paper-toolbar/paper-toolbar.html">
-<link rel="import" href="../../../paper-tabs/paper-tabs.html">
-<link rel="import" href="../../../paper-menu/paper-menu.html">
-<link rel="import" href="../../../paper-item/paper-item.html">
-<link rel="import" href="../../../iron-media-query/iron-media-query.html">
-<link rel="import" href="../../../iron-image/iron-image.html">
+<link rel="import" href="../bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="../bower_components/paper-drawer-panel/paper-drawer-panel.html">
+<link rel="import" href="../bower_components/paper-header-panel/paper-header-panel.html">
+<link rel="import" href="../bower_components/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="../bower_components/paper-toolbar/paper-toolbar.html">
+<link rel="import" href="../bower_components/paper-tabs/paper-tabs.html">
+<link rel="import" href="../bower_components/paper-menu/paper-menu.html">
+<link rel="import" href="../bower_components/paper-item/paper-item.html">
+<link rel="import" href="../bower_components/iron-media-query/iron-media-query.html">
+<link rel="import" href="../bower_components/iron-image/iron-image.html">
 <link href='https://fonts.googleapis.com/css?family=Roboto+Mono' rel='stylesheet' type='text/css'>
 <!--
 
