update(index): add pesto app link

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
   <li><a href="transform-navigation/">Transform Navigation</a></li>
   <li><a href="transform-dropdown/">Transform Dropdown</a></li>
   <li><a href="expand-dialog/">Expand Dialog</a></li>
+  <li><a href="pesto-app/">Pesto App</a></li>
 </ul>
 
 </body>
